SUBDIRS = . glue

pkg = atk
METADATA = Atk.metadata
SYMBOLS =
references = ../glib/glib-sharp.dll

glue_includes = atk/atk.h

sources = 			\
	TextChangedDetail.cs

customs =			\
	Global.custom		\
	Hyperlink.custom \
	Misc.custom		\
	Object.custom		\
	ObjectFactory.custom		\
	SelectionAdapter.custom	\
	TextAdapter.custom	\
	Util.custom

add_dist =

include ../Makefile.include
