SUBDIRS = . glue

pkg = atk
METADATA = Atk.metadata
SYMBOLS =
references = ../glib/glib-sharp.dll

glue_includes = atk/atk.h

sources = 			\
	Global.cs		\
	Hyperlink.cs		\
	Misc.cs			\
	Object.cs		\
	SelectionAdapter.cs	\
	TextAdapter.cs		\
	TextChangedDetail.cs	\
	Util.cs

add_dist =

include ../Makefile.include
